# map-to-gltf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flags.h  main.cpp
code/: brush.cpp  brush.h  entity.cpp  entity.h  face.cpp  main.cpp  map.cpp  map.h  mapconverter.cpp  mapconverter.h  math.h  poly.cpp
docs/: HowTo_Custom_Game_TrenchBroom.md
exts/fx/: gltf.h
exts/map-files/: Notes.txt  README.md  WAD3.cpp  WAD3.h  brush.cpp  brush.h  entity.cpp  entity.h  face.cpp  map.cpp  map.h  math.h  poly.cpp  property.cpp  texture.cpp
